case changed and comments deleted

--- a/Vue-basic/index.html
+++ b/Vue-basic/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="app" v-bind:style="{background:'#'+color}">
-      <coin-detail v-on:change-color="updateColor" v-bind:coin="btc">
+      <coin-detail v-on:change-color="update-color" v-bind:coin="btc">
         <template v-slot:text>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
